# aviata

./: Dockerfile  Makefile  README.md  airflow.py  custom_exceptions.py  docker-compose.yml  logger.py  models.py  provider_a_main.py  provider_b_main.py  pyproject.toml  req.txt  settings.py  setup.cfg
database/: base.py  requests.py  requests_model.py  requests_schema.py  results_model.py  utils.py
models/: airflow.py
redis/: redis.conf
redis/data/: dump.rdb
schemas/: airflow.py  flights.py  rates.py  requests.py
utils/: currency_rates.py  expire_timestamp.py  file_reader.py  search_flights.py
