[tool.poetry]
name = "aviata"
version = "0.1.0"
description = ""
authors = ["dima.yanvarev@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
httpx = "^0.23.0"
docker = "^6.0.0"
aioredis = "^2.0.1"
SQLAlchemy-Utils = "^0.38.3"
psycopg2-binary = "^2.9.3"
pydantic = "^1.10.2"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"
docker-compose = "^1.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
